# backend-app-for-KeyFlex

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  auth.py  profiles.py  routers_helper.py  stats.py  users.py
src/api/dependencies/: __init__.py  current_active_verified_user.py  current_user.py  profile_service.py  stats_service.py  stats_services.py  user_service.py
src/core/: config.py
src/core/authentication/: transport.py  user_manager.py
src/core/db/: user_database.py
src/core/errors/: user.py
src/core/exceptions/: user.py
src/core/forms/: profile.py
src/core/models/: __init__.py  achievements.py  base.py  db_helper.py  oauth_account.py  profile.py  statistics_data.py  user.py
src/core/repositories/: __init__.py  achievements.py  base_repository.py  last_sessions_stats.py  modes_stats.py  profile.py  stats.py  stats_data.py  user.py  users.py
src/core/schemas/: achievements.py  profile.py  stats.py  user.py
src/core/services/: __init__.py  achievements.py  last_sessions_stats.py  modes_stats.py  profile.py  stast_data.py  stats.py  user.py
src/core/tasks/: __init__.py  verify_task.py
src/core/utils/: s3_connection.py
src/migrations/versions/: 2024_08_01_1453-63f743cb1256_create_users_table.py  2024_08_08_2128-431c08a08700_create_oauth_accounts_table.py  2024_08_11_2244-738c8adfc969_create_profile_table.py  2024_08_11_2303-d9bcf75fa1bf_create_achievements_table.py  2024_08_12_1632-75044fc42b11_update_foreign_key_in_profile_table.py  2024_08_16_2149-06304d566677_update_profile_table.py  (+18 more)
(+13 files in other folders)
