[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
orjson = "^3.10.6"
aiobotocore = "^2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

